Development (#3)
* Dropped support for java 8. The minimum version is now 11
* Updated dependencies in JUNIT 4 to remove a vulnerability
* prettyfy pom.xml using variables
* minor updates in libs and documentation
* Added GitHub actions